// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuItem renders level 1 correctly 1`] = `
<a
  className="sc-bdVaJa gDraOD"
  href="/introduction"
  level={1}
  selected={false}
  title="Introduction"
>
  <svg
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M17 3H7c-1.1 0-1.99.9-1.99 2L5 21l7-3 7 3V5c0-1.1-.9-2-2-2zm0 15l-5-2.18L7 18V5h10v13z"
    />
  </svg>
  <span>
    Introduction
  </span>
</a>
`;

exports[`MenuItem renders level 2 correctly 1`] = `
<a
  className="sc-bdVaJa giLJLt"
  href="/introduction"
  level={2}
  selected={false}
  title="Introduction"
>
  <svg
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M17 3H7c-1.1 0-1.99.9-1.99 2L5 21l7-3 7 3V5c0-1.1-.9-2-2-2zm0 15l-5-2.18L7 18V5h10v13z"
    />
  </svg>
  <span>
    Introduction
  </span>
</a>
`;
